# daft-examples

./: .env.example  .gitignore  CHEATSHEET.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  conductor.json  hello_world.py  pyproject.toml  pytest.ini
.github/workflows/: test-daft-cloud.yml  test-patterns.yml  test-quickstart.yml  test.yml
TEMPLATE/: main.py
canon/: embed_image.py  eval_image_understanding.py  move_data.py  prompt_image_text.py  prompt_text.py
classify_image/: classify_image.py
classify_text/: classify_text.py
commoncrawl/: chunk_embed.py  show.py
datasets/: DATASET_SUMMARY.md  README.md
datasets/common_crawl/: README.md  basic_warc.py  basic_wat.py  basic_wet.py  chunk_embed.py  common.py  content_analysis.py  text_deduplication.py
datasets/laion/: README.md  basic_metadata.py  clip_training.py  image_text_pairs.py
datasets/open_images/: basic_images.py  image_processing.py  vision_models.py
datasets/reddit_irl/: basic_images.py  embeddings.py
datasets/tpch/: README.md  basic_query.py  performance_test.py  sql_queries.py
docs/: restructure-plan.md  s3_files_setup.md
embed_images/: embed_images.py  embed_video_frames.py  shot_boundary_detection.py
embed_text/: embed_pdf_text.py  embed_text.py
embed_videos/: embed_video_frames.py
frontpage/: ai_search.py  ai_search_long.py  ai_search_short.py  data_enrichment.py  dataset_curation.py  enr.py  pii_regex.py
io/: read_audio_file.py  read_pdfs.py
notebooks/: data-ai-summit-2024.ipynb  databricks_unity_catalog_llm_classification.ipynb  faster_whisper_schema.py  getting_started_with_common_crawl.ipynb  iceberg_summit_2024.ipynb  linkedin-03-05-2024.ipynb  mcap_robotics_dataframe.ipynb  minhash_dedupe_common_crawl.ipynb  mm_structured_outputs.ipynb  pydata_global_2023.ipynb  text_to_image_generation.ipynb  top_n_red_color.ipynb  using_cloud_with_ray.ipynb  voice_ai_analytics.ipynb  window_functions.ipynb
pipelines/: README.md  ai_search.py  catalog.py  data_enrichment.py  embed_docs.py  key_moments_extraction.py  shot_boundary_detection.py
podcasts/: podcast_ai_analytics_blog.md  podcast_summaries_openai.py
prompt/: prompt.py  prompt_openai_web_search.py  prompt_openrouter.py  prompt_openrouter_session.py  prompt_structured_outputs.py
quickstart/: 01_hello_world_prompt.py  02_semantic_search.py  03_data_enrichment.py  04_audio_file.py  05_video_file.py  README.md
rag/: rag.py
read_files/: read_audio_from_video.py
read_video/: read_audio_from_video.py
speech/: speech_analytics_openai.py
tests/: README.md  conftest.py  registry.py  test_context_kernel.py  test_examples.py
transcribe/: key_moments_extraction.py  openai_voice_analytics.py  transcribe.py  transcribe_faster_whisper.py  voice_ai_analytics.py
udfs/: cls_with_types.py
use_cases/: ai_visibility_tracking.py  embed_docs.py  shot_boundary_detection.py
voice_ai/: speech_analytics_openai.py  voice_ai_analytics.md  voice_ai_analytics.py
voice_ai_analytics/: voice_ai_analytics.py
(+176 files in other folders)
