[project]
name = "daft-examples"
version = "0.1.0"
description = "Daft Examples"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "daft[aws,openai,turbopuffer,unity,video,audio]>=0.7.1",
    "python-dotenv",
    "IPython",
    "ipykernel",
    "ipywidgets",
    "uuid_utils",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
]
