[project]
name = "daft-examples"
version = "0.1.0"
description = "Daft Examples"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "daft==0.7.4",
    "python-dotenv",
    "IPython",
    "ipykernel",
    "ipywidgets",
    "uuid_utils",
    "transformers>=5.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
]
