[project]
name = "daft-examples"
version = "0.1.0"
description = "Daft Examples"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "daft>=0.7.8",
    "daft-h3",
    "python-dotenv",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
]
lint = [
    "ruff>=0.9.0",
]
lakehouse = [
    "daft[iceberg,sql]>=0.7.8",
    "pyiceberg[sql-sqlite,gcsfs,bigquery]",
    "matplotlib",
    "sqlalchemy-bigquery",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "PIE",   # flake8-pie
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E712",   # true-false comparison (daft filter pattern: col("x") == True)
    "E741",   # ambiguous variable name
    "B005",   # strip with multi-characters (intentional in examples)
    "B006",   # mutable default arg (daft UDF pattern)
    "B008",   # function call in default arg (daft UDF pattern)
    "B905",   # zip without strict (examples don't need strict)
    "SIM105", # suppressible exception (explicit try/except is clearer in examples)
    "SIM211", # if-expr with false-true (readability over cleverness)
    "UP042",  # replace str enum (not worth changing in examples)
]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["F821", "E402"]  # cross-cell refs and imports
"pipelines/social_recommendation/reddit.ipynb" = ["F821"]
"pipelines/context_engineering/lambda_mapreduce_pdf_iceberg.py" = ["F821"]  # pyiceberg referenced in comment-like code
"pipelines/context_engineering/context_kernel_demo.py" = ["E402"]  # sys.path hack before import

[tool.ruff.lint.isort]
known-first-party = ["daft"]
